--- a/feladat.html
+++ b/feladat.html
@@ -9,3 +9,4 @@ Hungary_VotiveChurch, not updated, -41.540000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
+Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
