--- a/feladat.html
+++ b/feladat.html
@@ -12,3 +12,4 @@ Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
 Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.3300000000000125<br />
