--- a/feladat.html
+++ b/feladat.html
@@ -13,3 +13,4 @@ Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
 USA_PrattvillePansy, not updated, 0.3300000000000125<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
