--- a/feladat.html
+++ b/feladat.html
@@ -15,3 +15,4 @@ Hungary_FlatMattInBudapest, not updated, 0.0<br />
 USA_PrattvillePansy, not updated, 0.3300000000000125<br />
 Hungary_MinerSymbol, not updated, 0.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
