--- a/feladat.html
+++ b/feladat.html
@@ -19,3 +19,4 @@ USA_MunzeeLogo, not updated, 0.0<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
