--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,4 @@
 <b>start</b> - 2022.10.05 07:51:27<br />
 Slovakia_Giraffe, not updated, 0.4000000000000057<br />
+Germany_EventPin kihagyva (100%), <br />
+Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
