--- a/feladat.html
+++ b/feladat.html
@@ -2,3 +2,4 @@
 Slovakia_Giraffe, not updated, 0.4000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
