--- a/feladat.html
+++ b/feladat.html
@@ -3,3 +3,5 @@ Slovakia_Giraffe, not updated, 0.4000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn, <b>hiba (megváltozott a táblázat felépítése?)</b><br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
