--- a/feladat.html
+++ b/feladat.html
@@ -5,3 +5,4 @@ Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn, <b>hiba (megváltozott a táblázat felépítése?)</b><br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -41.540000000000006<br />
