--- a/feladat.html
+++ b/feladat.html
@@ -6,3 +6,4 @@ USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn, <b>hiba (megváltozott a táblázat felépítése?)</b><br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
 Hungary_VotiveChurch, not updated, -41.540000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
