--- a/feladat.html
+++ b/feladat.html
@@ -21,3 +21,4 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
+Finland_Hyvinkaa, not updated, 0.7899999999999991<br />
