--- a/feladat.html
+++ b/feladat.html
@@ -23,3 +23,4 @@ UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.7899999999999991<br />
 USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
