--- a/feladat.html
+++ b/feladat.html
@@ -24,3 +24,5 @@ Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.7899999999999991<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
