--- a/feladat.html
+++ b/feladat.html
@@ -27,3 +27,7 @@ UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
 USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
 Netherlands_TeaAtGrandma, not updated, 1.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
