--- a/feladat.html
+++ b/feladat.html
@@ -34,3 +34,4 @@ USA_GreenvilleGreenWave, not updated, 1.0<br />
 Australia_QueensGambit-Horse, <b>updated</b>, 677, <a href="https://www.munzee.com/map/r1prds3cr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QueensGambit-Horse.json" target="_blank">json</a><br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
 USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
