--- a/feladat.html
+++ b/feladat.html
@@ -41,3 +41,4 @@ USA_StAugustinePirateShip, not updated, 0.7199999999999989<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
