--- a/feladat.html
+++ b/feladat.html
@@ -43,3 +43,4 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.2415458937198096<br />
+USA_Turtle, not updated, 0.08818342151676006<br />
