--- a/feladat.html
+++ b/feladat.html
@@ -44,3 +44,4 @@ Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.2415458937198096<br />
 USA_Turtle, not updated, 0.08818342151676006<br />
+Finland_BioOtokka, not updated, 0.0<br />
