--- a/feladat.html
+++ b/feladat.html
@@ -45,3 +45,4 @@ UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.2415458937198096<br />
 USA_Turtle, not updated, 0.08818342151676006<br />
 Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.5799999999999983<br />
