--- a/feladat.html
+++ b/feladat.html
@@ -49,3 +49,4 @@ Canada_GatineauFMGGarden, not updated, 0.5799999999999983<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, <b>updated</b>, 747, <a href="https://www.munzee.com/map/sp1ch758h/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Spain_PalmaDeMallorca-OfficialFlag.json" target="_blank">json</a><br />
 Switzerland_GiddyUpGo, not updated, 0.0<br />
+Belgium_KnokkeHeist, not updated, 0.0<br />
