--- a/feladat.html
+++ b/feladat.html
@@ -50,3 +50,4 @@ Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, <b>updated</b>, 747, <a href="https://www.munzee.com/map/sp1ch758h/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Spain_PalmaDeMallorca-OfficialFlag.json" target="_blank">json</a><br />
 Switzerland_GiddyUpGo, not updated, 0.0<br />
 Belgium_KnokkeHeist, not updated, 0.0<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
