--- a/feladat.html
+++ b/feladat.html
@@ -53,3 +53,4 @@ Belgium_KnokkeHeist, not updated, 0.0<br />
 Hungary_Evolution, not updated, 0.8333333333333286<br />
 Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
 USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
