--- a/feladat.html
+++ b/feladat.html
@@ -54,3 +54,4 @@ Hungary_Evolution, not updated, 0.8333333333333286<br />
 Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
