--- a/feladat.html
+++ b/feladat.html
@@ -56,3 +56,4 @@ USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
 Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
