--- a/feladat.html
+++ b/feladat.html
@@ -57,3 +57,4 @@ Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
 Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, not updated, 0.28000000000000114<br />
