--- a/feladat.html
+++ b/feladat.html
@@ -58,3 +58,4 @@ Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
 Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.28000000000000114<br />
+Hungary_SurpriseAirline, not updated, 0.0<br />
