--- a/feladat.html
+++ b/feladat.html
@@ -59,3 +59,4 @@ Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.28000000000000114<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
+Hungary_RubiksCube, not updated, 0.0<br />
