--- a/feladat.html
+++ b/feladat.html
@@ -61,3 +61,4 @@ Slovakia_FlagOfSlovakia, not updated, 0.28000000000000114<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
 Hungary_RubiksCube, not updated, 0.0<br />
 Hungary_GyulaCastle, not updated, 0.0<br />
+USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
