--- a/feladat.html
+++ b/feladat.html
@@ -119,3 +119,15 @@ USA_MamaTsLadybug kihagyva (100%), <br />
 USA_MermaidTail kihagyva (100%), <br />
 USA_OctoberPumpkin kihagyva (100%), <br />
 USA_SantaSirPrize, not updated, 0.0<br />
+USA_Snowman kihagyva (100%), <br />
+USA_SprinkleCupcake kihagyva (100%), <br />
+USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
+USA_WestportSpecials kihagyva (100%), <br />
+Netherlands_TheWall kihagyva (100%), <br />
+Netherlands_PompebledPalet kihagyva (100%), <br />
+Netherlands_GroeneStroom kihagyva (100%), <br />
+Netherlands_Klomp kihagyva (100%), <br />
+Netherlands_EvoAppleEch kihagyva (100%), <br />
+Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
+USA_GreenvilleCloverLeaf kihagyva (100%), <br />
+Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
