--- a/feladat.html
+++ b/feladat.html
@@ -131,3 +131,4 @@ Netherlands_EvoAppleEch kihagyva (100%), <br />
 Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_EmeraldInHilleroed, not updated, 0.0<br />
