--- a/feladat.html
+++ b/feladat.html
@@ -132,3 +132,4 @@ Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
 Denmark_EmeraldInHilleroed, not updated, 0.0<br />
+Finland_HalkokarinEvovene, not updated, 1.0<br />
