--- a/feladat.html
+++ b/feladat.html
@@ -133,3 +133,5 @@ USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
 Denmark_EmeraldInHilleroed, not updated, 0.0<br />
 Finland_HalkokarinEvovene, not updated, 1.0<br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
