--- a/feladat.html
+++ b/feladat.html
@@ -135,3 +135,18 @@ Denmark_EmeraldInHilleroed, not updated, 0.0<br />
 Finland_HalkokarinEvovene, not updated, 1.0<br />
 USA_CarettaSeaTurtle kihagyva (100%), <br />
 UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+<b>stop</b> - 2022.10.05 08:24:03<br />
+összesen 1955<br />
