--- a/feladat.html
+++ b/feladat.html
@@ -33,3 +33,4 @@ Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 1.0<br />
 Australia_QueensGambit-Horse, not updated, 0.0<br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
