--- a/feladat.html
+++ b/feladat.html
@@ -35,3 +35,5 @@ Australia_QueensGambit-Horse, not updated, 0.0<br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
