--- a/feladat.html
+++ b/feladat.html
@@ -47,3 +47,4 @@ USA_Turtle, not updated, 0.08818342151676006<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.5799999999999983<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
