--- a/feladat.html
+++ b/feladat.html
@@ -50,3 +50,4 @@ Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 0.0<br />
 Belgium_KnokkeHeist, not updated, 0.0<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
