--- a/feladat.html
+++ b/feladat.html
@@ -1,7 +1,6 @@
-<b>start</b> - 2022.10.05 10:49:08<br />
+<b>start</b> - 2022.10.05 10:59:06<br />
 Slovakia_Giraffe, not updated, 0.4000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
-Netherlands_EvolutionBeeckestijn, <b>hiba (megváltozott a táblázat felépítése?)</b><br />
-Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn, <b>updated</b>, 1204, <a href="https://www.munzee.com/map/u1763u3rj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_EvolutionBeeckestijn.json" target="_blank">json</a> <b>100%</b><br />
