--- a/feladat.html
+++ b/feladat.html
@@ -146,3 +146,9 @@ USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, <b>updated</b>, 66, <a href="https://www.munzee.com/map/gcphnhsrt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TadleyJoyCon.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Netherlands_city_Beeckestijn, <b>updated</b>, <a href="https://www.munzee.com/map/u1763sv5g/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Beeckestijn.json" target="_blank">json</a><br />
+----felhasználók<br />
+<b>stop</b> - 2022.10.05 11:27:03<br />
+összesen 1676<br />
