--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.10.05 10:59:06<br />
+<b>start</b> - 2022.10.06 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.4000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
-Netherlands_EvolutionBeeckestijn, <b>updated</b>, 1204, <a href="https://www.munzee.com/map/u1763u3rj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_EvolutionBeeckestijn.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -42.57000000000001<br />
+Hungary_VotiveChurch, not updated, -42.870000000000005<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
@@ -145,10 +145,9 @@ USA_RobHeartsLou1 kihagyva (100%), <br />
 USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, <b>updated</b>, 66, <a href="https://www.munzee.com/map/gcphnhsrt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TadleyJoyCon.json" target="_blank">json</a><br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 ----csoportok<br />
 ----városok<br />
-Netherlands_city_Beeckestijn, <b>updated</b>, <a href="https://www.munzee.com/map/u1763sv5g/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Beeckestijn.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.10.05 11:27:03<br />
-összesen 1676<br />
+<b>stop</b> - 2022.10.06 01:17:06<br />
+összesen 416<br />
