--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,29 @@
-<b>start</b> - 2022.10.11 04:15:22<br />
+<b>start</b> - 2022.10.12 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.7000000000000028<br />
+Germany_EventPin kihagyva (100%), <br />
+Germany_TresorICELimburg, not updated, 0.5177514792899416<br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -43.050000000000004<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
+Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.3300000000000125<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
+Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, <b>updated</b>, 453, <a href="https://www.munzee.com/map/u1kh9uc8m/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TeaAtGrandma.json" target="_blank">json</a><br />
