--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.10.20 01:10:13<br />
+<b>start</b> - 2022.10.21 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.7000000000000028<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8136094674556205<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -41.02<br />
+Hungary_VotiveChurch, not updated, -43.17000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
@@ -21,7 +21,7 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
 Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
-Finland_Hyvinkaa, not updated, 0.1599999999999966<br />
+Finland_Hyvinkaa, not updated, 0.6299999999999955<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
@@ -37,117 +37,4 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.8999999999999986<br />
-Spain_WineOClock kihagyva (100%), <br />
-Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
-Netherlands_PacMunzee, not updated, 0.0<br />
-UnitedKingdom_BristolBalloon, not updated, 0.0<br />
-USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, not updated, 0.08818342151676006<br />
-Finland_BioOtokka, not updated, 0.0<br />
-Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
-Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
-Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
-Switzerland_GiddyUpGo, not updated, 0.0<br />
-Belgium_KnokkeHeist, not updated, 0.25<br />
-Hungary_Evolution, not updated, 0.8333333333333286<br />
-Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
-USA_OfficerDown, not updated, 0.0<br />
-Hungary_Brigetio, not updated, 0.3846153846153797<br />
-Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
-Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
-Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
-Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
-Hungary_SurpriseAirline, not updated, 0.0<br />
-Hungary_RubiksCube, not updated, 0.0<br />
-Hungary_GyulaCastle, not updated, 0.0<br />
-USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
-USA_FortMyersAlligator, not updated, 0.0<br />
-Denmark_TheSwanInHilleroed, not updated, 0.0<br />
-Hungary_CsepelObol, not updated, 0.0<br />
-Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
-Czechia_KMZNAK, not updated, 0.03999999999999204<br />
-Luxembourg_LuxembourgFlag, not updated, 0.0<br />
-USA_MarioFireballVoid, not updated, 0.0<br />
-USA_SpyGoggles, not updated, 0.0<br />
-Hungary_Farkas-erdo, not updated, 0.0<br />
-Hungary_CastleOfDiosgyor, not updated, 0.0<br />
-Denmark_GhostInHilleroed, not updated, 0.0<br />
-USA_CherryBomb kihagyva (100%), <br />
-USA_Stormtrooper kihagyva (100%), <br />
-Australia_BeeFlowers kihagyva (100%), <br />
-Australia_BeeSanta kihagyva (100%), <br />
-Australia_BuzzzBee kihagyva (100%), <br />
-Australia_LaidleyBeeHive kihagyva (100%), <br />
-Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
-Canada_MaillardvilleChristmas kihagyva (100%), <br />
-Finland_KokkolanKurpitsainen kihagyva (100%), <br />
-Hungary_10thBirthdayCake kihagyva (100%), <br />
-Hungary_BlackCat kihagyva (100%), <br />
-Hungary_ChainBridge kihagyva (100%), <br />
-Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
-Hungary_DuckAtBalaton kihagyva (100%), <br />
-Hungary_FlagsInBudapest, not updated, 0.0<br />
-Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
-Hungary_FrogInBudaors kihagyva (100%), <br />
-Hungary_SantasSledge kihagyva (100%), <br />
-Hungary_SnoopyInBudapest kihagyva (100%), <br />
-Hungary_SteamshipOnDanube kihagyva (100%), <br />
-Hungary_SurpriseCar kihagyva (100%), <br />
-Hungary_SurpriseInBudapest kihagyva (100%), <br />
-Hungary_SwansByTheDanube kihagyva (100%), <br />
-Lithuania_Akmenynas kihagyva (100%), <br />
-Lithuania_OZOParkas kihagyva (100%), <br />
-Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
-Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
-Netherlands_EVO2Kerkrade kihagyva (100%), <br />
-Slovakia_Alien kihagyva (100%), <br />
-Sweden_SwedishFlag kihagyva (100%), <br />
-UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
-UnitedKingdom_GriffMemorial kihagyva (100%), <br />
-UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
-USA_BurlingtonFlamingo kihagyva (100%), <br />
-USA_CandyCaneZee kihagyva (100%), <br />
-USA_ChristmasTree kihagyva (100%), <br />
-USA_GingerbreadMan kihagyva (100%), <br />
-USA_GumballMachine kihagyva (100%), <br />
-USA_HOwlOween kihagyva (100%), <br />
-USA_LakelandCandyCorn kihagyva (100%), <br />
-USA_MamaTsLadybug kihagyva (100%), <br />
-USA_MermaidTail kihagyva (100%), <br />
-USA_OctoberPumpkin kihagyva (100%), <br />
-USA_SantaSirPrize, not updated, 0.0<br />
-USA_Snowman kihagyva (100%), <br />
-USA_SprinkleCupcake kihagyva (100%), <br />
-USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
-USA_WestportSpecials kihagyva (100%), <br />
-Netherlands_TheWall kihagyva (100%), <br />
-Netherlands_PompebledPalet kihagyva (100%), <br />
-Netherlands_GroeneStroom kihagyva (100%), <br />
-Netherlands_Klomp kihagyva (100%), <br />
-Netherlands_EvoAppleEch kihagyva (100%), <br />
-Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
-USA_GreenvilleCloverLeaf kihagyva (100%), <br />
-Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
-Denmark_EmeraldInHilleroed, not updated, 0.0<br />
-Finland_HalkokarinEvovene, not updated, 1.0<br />
-USA_CarettaSeaTurtle kihagyva (100%), <br />
-UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
-Netherlands_LuckyClover kihagyva (100%), <br />
-Poland_Jewel kihagyva (100%), <br />
-Poland_Reksio kihagyva (100%), <br />
-Finland_KokkolanVaakuna kihagyva (100%), <br />
-Germany_PapageiCrumstadt kihagyva (100%), <br />
-USA_XIBirthdayMadHatter kihagyva (100%), <br />
-USA_RobHeartsLou1 kihagyva (100%), <br />
-USA_RobHeartsLou2 kihagyva (100%), <br />
-USA_Corgi kihagyva (100%), <br />
-Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.10.20 01:17:01<br />
-összesen 408<br />
+USA_StAugustinePirateShip, <b>updated</b>, 230, <a href="https://www.munzee.com/map/djq1y8v3x/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StAugustinePirateShip.json" target="_blank">json</a><br />
