--- a/feladat.html
+++ b/feladat.html
@@ -1,12 +1,12 @@
-<b>start</b> - 2022.10.24 01:10:19<br />
+<b>start</b> - 2022.10.24 12:19:25<br />
 Slovakia_Giraffe, not updated, 0.7000000000000028<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -40.720000000000006<br />
-Germany_WappenHalberstadt, <b>updated</b>, 307, <a href="https://www.munzee.com/map/u1pz5x8s1/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_WappenHalberstadt.json" target="_blank">json</a><br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.9000000000000057<br />
 Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, not updated, 0.17636684303351302<br />
+USA_Turtle, not updated, 0.35273368606701894<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -146,8 +146,4 @@ USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.10.24 01:22:18<br />
-összesen 719<br />
+Canada_HalloweenInOttawa, <b>updated</b>, 283, <a href="https://www.munzee.com/map/f246dqzzt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_HalloweenInOttawa.json" target="_blank">json</a> <b>100%</b><br />
