--- a/feladat.html
+++ b/feladat.html
@@ -147,3 +147,4 @@ USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa, <b>updated</b>, 283, <a href="https://www.munzee.com/map/f246dqzzt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_HalloweenInOttawa.json" target="_blank">json</a> <b>100%</b><br />
+Slovakia_HungryBatTerry, <b>updated</b>, 178, <a href="https://www.munzee.com/map/u2s1yt9t7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_HungryBatTerry.json" target="_blank">json</a> <b>100%</b><br />
