--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.24 12:19:25<br />
+<b>start</b> - 2022.10.24 13:01:33<br />
 Slovakia_Giraffe, not updated, 0.7000000000000028<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -146,5 +146,6 @@ USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-Canada_HalloweenInOttawa, <b>updated</b>, 283, <a href="https://www.munzee.com/map/f246dqzzt/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_HalloweenInOttawa.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_HungryBatTerry, <b>updated</b>, 178, <a href="https://www.munzee.com/map/u2s1yt9t7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_HungryBatTerry.json" target="_blank">json</a> <b>100%</b><br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 799, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
