--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,11 @@
 <b>start</b> - 2022.10.25 01:10:12<br />
 Slovakia_Giraffe, <b>updated</b>, 555, <a href="https://www.munzee.com/map/u2trnx81p/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_Giraffe.json" target="_blank">json</a><br />
+Germany_EventPin kihagyva (100%), <br />
+Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, <b>updated</b>, 910, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
