--- a/feladat.html
+++ b/feladat.html
@@ -150,3 +150,4 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, -36.4<br />
 USA_LightningBoltInSapphire, <b>updated</b>, 119, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 101, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
