--- a/feladat.html
+++ b/feladat.html
@@ -1,5 +1,5 @@
-<b>start</b> - 2022.10.25 01:10:12<br />
-Slovakia_Giraffe, <b>updated</b>, 555, <a href="https://www.munzee.com/map/u2trnx81p/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_Giraffe.json" target="_blank">json</a><br />
+<b>start</b> - 2022.10.25 06:00:03<br />
+Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
@@ -8,7 +8,7 @@ Hungary_TatabanyaBlackhole, not updated, 0.0<br />
 Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
-Slovakia_ChristmasStable, <b>updated</b>, 910, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, 0.20000000000000284<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
@@ -148,15 +148,4 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, -36.4<br />
-USA_LightningBoltInSapphire, <b>updated</b>, 119, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 101, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-----csoportok<br />
-----városok<br />
-Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-----felhasználók<br />
-Jeffeth_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_GOTM.json" target="_blank">json</a><br />
-Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.10.25 01:45:29<br />
-összesen 2116<br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 833, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
