--- a/feladat.html
+++ b/feladat.html
@@ -151,3 +151,12 @@ Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, <b>updated</b>, 833, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
 USA_LightningBoltInSapphire, <b>updated</b>, 114, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
 USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 100, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+----felhasználók<br />
+Jeffeth_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_GOTM.json" target="_blank">json</a><br />
+Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.10.25 06:25:49<br />
+összesen 1545<br />
