--- a/feladat.html
+++ b/feladat.html
@@ -154,3 +154,4 @@ USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 115, <a href="https://www.mu
 Germany_Bullseye, <b>updated</b>, 1047, <a href="https://www.munzee.com/map/u336wpc2q/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Bullseye.json" target="_blank">json</a> <b>100%</b><br />
 Finland_TampereElectric, <b>updated</b>, 656, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
 USA_MontgomeryBaseball, <b>updated</b>, 296, <a href="https://www.munzee.com/map/djf8hp7k0/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryBaseball.json" target="_blank">json</a><br />
+USA_HanksBoots, <b>updated</b>, 542, <a href="https://www.munzee.com/map/djf8hr6up/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HanksBoots.json" target="_blank">json</a><br />
