--- a/feladat.html
+++ b/feladat.html
@@ -156,3 +156,4 @@ Finland_TampereElectric, <b>updated</b>, 656, <a href="https://www.munzee.com/ma
 USA_MontgomeryBaseball, <b>updated</b>, 296, <a href="https://www.munzee.com/map/djf8hp7k0/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryBaseball.json" target="_blank">json</a><br />
 USA_HanksBoots, <b>updated</b>, 542, <a href="https://www.munzee.com/map/djf8hr6up/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HanksBoots.json" target="_blank">json</a><br />
 USA_ColorTheZoo, <b>updated</b>, 148, <a href="https://www.munzee.com/map/djf8kvc9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColorTheZoo.json" target="_blank">json</a><br />
+Netherlands_SupermanVsBatman, <b>updated</b>, 645, <a href="https://www.munzee.com/map/u171jz6j8/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_SupermanVsBatman.json" target="_blank">json</a> <b>100%</b><br />
