--- a/feladat.html
+++ b/feladat.html
@@ -160,3 +160,15 @@ Netherlands_SupermanVsBatman, <b>updated</b>, 645, <a href="https://www.munzee.c
 Netherlands_QR-Spaarnwoude, <b>updated</b>, 1059, <a href="https://www.munzee.com/map/u1766fj3h/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_QR-Spaarnwoude.json" target="_blank">json</a> <b>100%</b><br />
 Slovakia_IcemenInLove, <b>updated</b>, 310, <a href="https://www.munzee.com/map/u2s1yzv55/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_IcemenInLove.json" target="_blank">json</a><br />
 Slovakia_TrencinCastle, <b>updated</b>, 160, <a href="https://www.munzee.com/map/u2sy4ktgb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_TrencinCastle.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
+----felhasználók<br />
+Jeffeth_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_GOTM.json" target="_blank">json</a><br />
+Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
+Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.10.25 21:01:09<br />
+összesen 6901<br />
