--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.25 19:06:07<br />
+<b>start</b> - 2022.10.26 01:10:09<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -9,7 +9,7 @@ Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
-Slovakia_LePetitPrince, <b>updated</b>, 356, <a href="https://www.munzee.com/map/u2s1yxmhk/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_LePetitPrince.json" target="_blank">json</a><br />
+Slovakia_LePetitPrince, not updated, 0.0<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
 USA_PrattvillePansy, not updated, 0.3300000000000125<br />
@@ -148,27 +148,5 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 898, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 128, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 115, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-Germany_Bullseye, <b>updated</b>, 1047, <a href="https://www.munzee.com/map/u336wpc2q/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Bullseye.json" target="_blank">json</a> <b>100%</b><br />
-Finland_TampereElectric, <b>updated</b>, 656, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
-USA_MontgomeryBaseball, <b>updated</b>, 296, <a href="https://www.munzee.com/map/djf8hp7k0/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MontgomeryBaseball.json" target="_blank">json</a><br />
-USA_HanksBoots, <b>updated</b>, 542, <a href="https://www.munzee.com/map/djf8hr6up/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HanksBoots.json" target="_blank">json</a><br />
-USA_ColorTheZoo, <b>updated</b>, 148, <a href="https://www.munzee.com/map/djf8kvc9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColorTheZoo.json" target="_blank">json</a><br />
-Netherlands_SupermanVsBatman, <b>updated</b>, 645, <a href="https://www.munzee.com/map/u171jz6j8/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_SupermanVsBatman.json" target="_blank">json</a> <b>100%</b><br />
-Netherlands_QR-Spaarnwoude, <b>updated</b>, 1059, <a href="https://www.munzee.com/map/u1766fj3h/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_QR-Spaarnwoude.json" target="_blank">json</a> <b>100%</b><br />
-Slovakia_IcemenInLove, <b>updated</b>, 310, <a href="https://www.munzee.com/map/u2s1yzv55/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_IcemenInLove.json" target="_blank">json</a><br />
-Slovakia_TrencinCastle, <b>updated</b>, 160, <a href="https://www.munzee.com/map/u2sy4ktgb/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_TrencinCastle.json" target="_blank">json</a><br />
-----csoportok<br />
-----városok<br />
-Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
-Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-USA_city_Montgomery, <b>updated</b>, <a href="https://www.munzee.com/map/djf8m22fr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Montgomery.json" target="_blank">json</a><br />
-----felhasználók<br />
-Jeffeth_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_GOTM.json" target="_blank">json</a><br />
-Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.10.25 21:01:09<br />
-összesen 6901<br />
+USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
+USA_LightningBoltInSapphire, <b>updated</b>, 122, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
