--- a/feladat.html
+++ b/feladat.html
@@ -150,3 +150,22 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
 USA_LightningBoltInSapphire, <b>updated</b>, 122, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.0<br />
+USA_MontgomeryBaseball, not updated, 0.0<br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove, not updated, 0.0<br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+----felhasználók<br />
+Jeffeth_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_GOTM.json" target="_blank">json</a><br />
+Neloras_GOTM, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1zefpc/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_GOTM.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.10.26 01:21:09<br />
+összesen 660<br />
