--- a/feladat.html
+++ b/feladat.html
@@ -1,3 +1,6 @@
 <b>start</b> - 2022.10.26 06:58:35<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin, <b>updated</b>, 780, <a href="https://www.munzee.com/map/u1j09d1xz/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_EventPin.json" target="_blank">json</a> <b>100%</b><br />
+Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
+Netherlands_EvolutionBeeckestijn, <b>updated</b>, 1130, <a href="https://www.munzee.com/map/u1763u3rj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_EvolutionBeeckestijn.json" target="_blank">json</a> <b>100%</b><br />
