--- a/feladat.html
+++ b/feladat.html
@@ -4,3 +4,28 @@ Germany_EventPin, <b>updated</b>, 780, <a href="https://www.munzee.com/map/u1j09
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn, <b>updated</b>, 1130, <a href="https://www.munzee.com/map/u1763u3rj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_EvolutionBeeckestijn.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_LePetitPrince, not updated, 0.0<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.3300000000000125<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.9129967776584316<br />
+Finland_Nurmijarvi, not updated, 0.9000000000000057<br />
+Finland_Hyvinkaa, not updated, 0.6299999999999955<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, not updated, 0.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht, <b>updated</b>, 281, <a href="https://www.munzee.com/map/u1h4vf56p/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_VlagEcht.json" target="_blank">json</a> <b>100%</b><br />
