--- a/feladat.html
+++ b/feladat.html
@@ -1,9 +1,9 @@
-<b>start</b> - 2022.10.26 06:58:35<br />
+<b>start</b> - 2022.10.26 08:07:22<br />
 Slovakia_Giraffe, not updated, 0.0<br />
-Germany_EventPin, <b>updated</b>, 780, <a href="https://www.munzee.com/map/u1j09d1xz/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_EventPin.json" target="_blank">json</a> <b>100%</b><br />
+Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.0<br />
-Netherlands_EvolutionBeeckestijn, <b>updated</b>, 1130, <a href="https://www.munzee.com/map/u1763u3rj/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_EvolutionBeeckestijn.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
 Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
@@ -28,4 +28,14 @@ Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_
 USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
 Netherlands_TeaAtGrandma, not updated, 0.0<br />
 Canada_Skull kihagyva (100%), <br />
-Netherlands_VlagEcht, <b>updated</b>, 281, <a href="https://www.munzee.com/map/u1h4vf56p/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_VlagEcht.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
+Australia_QueensGambit-Horse, not updated, 0.9345794392523317<br />
+USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.0<br />
+Spain_WineOClock, <b>updated</b>, 458, <a href="https://www.munzee.com/map/ezmmh43by/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Spain_WineOClock.json" target="_blank">json</a> <b>100%</b><br />
