--- a/feladat.html
+++ b/feladat.html
@@ -124,3 +124,48 @@ USA_SprinkleCupcake kihagyva (100%), <br />
 USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
 USA_WestportSpecials kihagyva (100%), <br />
 Netherlands_TheWall, <b>updated</b>, 451, <a href="https://www.munzee.com/map/u1kh9upnp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TheWall.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_PompebledPalet kihagyva (100%), <br />
+Netherlands_GroeneStroom kihagyva (100%), <br />
+Netherlands_Klomp kihagyva (100%), <br />
+Netherlands_EvoAppleEch kihagyva (100%), <br />
+Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
+USA_GreenvilleCloverLeaf kihagyva (100%), <br />
+Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_EmeraldInHilleroed, not updated, 0.0<br />
+Finland_HalkokarinEvovene, not updated, 1.0<br />
+USA_CarettaSeaTurtle kihagyva (100%), <br />
+UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
+Netherlands_LuckyClover kihagyva (100%), <br />
+Poland_Jewel kihagyva (100%), <br />
+Poland_Reksio kihagyva (100%), <br />
+Finland_KokkolanVaakuna kihagyva (100%), <br />
+Germany_PapageiCrumstadt kihagyva (100%), <br />
+USA_XIBirthdayMadHatter kihagyva (100%), <br />
+USA_RobHeartsLou1 kihagyva (100%), <br />
+USA_RobHeartsLou2 kihagyva (100%), <br />
+USA_Corgi kihagyva (100%), <br />
+Poland_ZamekPiastow kihagyva (100%), <br />
+UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+Canada_HalloweenInOttawa kihagyva (100%), <br />
+Slovakia_HungryBatTerry kihagyva (100%), <br />
+USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
+USA_LightningBoltInSapphire, not updated, 0.6000000000000014<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.7999999999999972<br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.0<br />
+USA_MontgomeryBaseball, not updated, 0.0<br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove, not updated, 0.0<br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+Germany_city_Bonn, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02rpfx/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Bonn.json" target="_blank">json</a><br />
+Netherlands_city_Beeckestijn, <b>updated</b>, <a href="https://www.munzee.com/map/u1763sv5g/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Beeckestijn.json" target="_blank">json</a><br />
+Netherlands_city_Echt, <b>updated</b>, <a href="https://www.munzee.com/map/u1h4tr7p2/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Echt.json" target="_blank">json</a><br />
+Netherlands_city_Lemmer, <b>updated</b>, <a href="https://www.munzee.com/map/u1khdnhch/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Lemmer.json" target="_blank">json</a><br />
+----felhasználók<br />
+<b>stop</b> - 2022.10.26 08:31:18<br />
+összesen 1436<br />
