--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.26 08:07:22<br />
+<b>start</b> - 2022.10.26 09:02:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -38,7 +38,7 @@ Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
 USA_StAugustinePirateShip, not updated, 0.0<br />
-Spain_WineOClock, <b>updated</b>, 458, <a href="https://www.munzee.com/map/ezmmh43by/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Spain_WineOClock.json" target="_blank">json</a> <b>100%</b><br />
+Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
@@ -123,7 +123,7 @@ USA_Snowman kihagyva (100%), <br />
 USA_SprinkleCupcake kihagyva (100%), <br />
 USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
 USA_WestportSpecials kihagyva (100%), <br />
-Netherlands_TheWall, <b>updated</b>, 451, <a href="https://www.munzee.com/map/u1kh9upnp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TheWall.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_TheWall kihagyva (100%), <br />
 Netherlands_PompebledPalet kihagyva (100%), <br />
 Netherlands_GroeneStroom kihagyva (100%), <br />
 Netherlands_Klomp kihagyva (100%), <br />
@@ -165,7 +165,6 @@ Slovakia_TrencinCastle, not updated, 0.0<br />
 Germany_city_Bonn, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02rpfx/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Bonn.json" target="_blank">json</a><br />
 Netherlands_city_Beeckestijn, <b>updated</b>, <a href="https://www.munzee.com/map/u1763sv5g/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Beeckestijn.json" target="_blank">json</a><br />
 Netherlands_city_Echt, <b>updated</b>, <a href="https://www.munzee.com/map/u1h4tr7p2/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Echt.json" target="_blank">json</a><br />
-Netherlands_city_Lemmer, <b>updated</b>, <a href="https://www.munzee.com/map/u1khdnhch/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Lemmer.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.10.26 08:31:18<br />
-összesen 1436<br />
+<b>stop</b> - 2022.10.26 09:09:36<br />
+összesen 447<br />
