--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.10.26 09:02:08<br />
+<b>start</b> - 2022.10.27 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -148,23 +148,4 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
-USA_LightningBoltInSapphire, not updated, 0.6000000000000014<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.7999999999999972<br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, not updated, 0.0<br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-Germany_city_Bonn, <b>updated</b>, <a href="https://www.munzee.com/map/u1j02rpfx/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Bonn.json" target="_blank">json</a><br />
-Netherlands_city_Beeckestijn, <b>updated</b>, <a href="https://www.munzee.com/map/u1763sv5g/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Beeckestijn.json" target="_blank">json</a><br />
-Netherlands_city_Echt, <b>updated</b>, <a href="https://www.munzee.com/map/u1h4tr7p2/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Echt.json" target="_blank">json</a><br />
-----felhasználók<br />
-<b>stop</b> - 2022.10.26 09:09:36<br />
-összesen 447<br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 922, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
