--- a/feladat.html
+++ b/feladat.html
@@ -161,3 +161,4 @@ Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
 Slovakia_IcemenInLove, not updated, 0.0<br />
 Slovakia_TrencinCastle, not updated, 0.0<br />
 UnitedKingdom_HoratioTheHermitCrab, <b>updated</b>, 613, <a href="https://www.munzee.com/map/u12vje1zv/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HoratioTheHermitCrab.json" target="_blank">json</a> <b>100%</b><br />
+Australia_PiratePetesParrot, <b>updated</b>, 235, <a href="https://www.munzee.com/map/r1prduegj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_PiratePetesParrot.json" target="_blank">json</a> <b>100%</b><br />
